src/styles/styles.scss
/* ... */
.projects-container {
  z-index: 20;
  display: flex;
  flex-direction: column;
  margin-top: 3500px;
  width: 100%;
  height: 56%;
  position: absolute;
  background-color: $background;
  .projects-all {
    max-height: 400px !important;
    max-width: 2000px;
    margin-left: 20%;
    .projects-title {
      color: $lightblue;
      background-color: $background;
      font-weight: bold;
      font-size: 3vw;
      font-family: $font;
      margin-left: 15%;
    }
    .project-mobile-explain {
      display: none;
    }
    .projects-line {
      display: inline-block;
      vertical-align: middle;
      width: 30%;
      margin-inline-start: 20px !important;
      margin-right: 0% !important;
    }
  }
}

.individual-project {
  display: inline-block;
  width: 350px;
  height: 350px;
  border: 1px solid $white;
  margin-top: 50px;
  margin-right: 50px;
  background-color: #102457 !important;

  .individual-project-title {
    margin-top: 5px;
    text-align: center;
    font-size: 1.35vw;
    color: $lightblue;
    overflow: hidden;
    white-space: nowrap;
  }

  .individual-project-description {
    margin-top: 5px;
    height: 200px;
    text-align: left;
    margin-left: 15px;
    width: 95%;
    font-size: 1.2vw;
    color: $white;
  }

  .individual-project-languages {
    margin-left: 15px;
    margin-top: 20px;
    font-size: 1.2vw;
    color: #b5b7bc;
    word-spacing: 10px;
  }

  .project-github {
    height: 30px;
    width: 30px;
    fill: #ffffff;
    position: absolute;
    right: 10px;
    bottom: 10px;
    display: none;
  }
}
.individual-project:hover {
  transform: scale(1.15);
  .project-github {
    display: initial;
  }
  .google-play {
    display: initial;
  }
  .google-chrome {
    display: initial;
  }
}

.contact-container {
  z-index: 20;
  display: flex;
  flex-direction: column;
  margin-top: 6500px;
  width: 100%;
  height: 56%;
  position: absolute;
  background-color: $background;
  .contact-all {
    max-height: 400px !important;
    max-width: 750px;
    margin-left: 31%;
    .contact-title {
      color: $lightblue;
      background-color: $background;
      font-weight: bold;
      font-size: 3vw;
      font-family: $font;
    }
    .contact-line {
      display: inline-block;
      vertical-align: middle;
      width: 40%;
      margin-inline-start: 20px !important;
      margin-right: 0% !important;
    }
    .contact-form {
      width: 100%;
      .section1 {
        float: left;
        margin-right: 50px;
        margin-top: -70px;
        .contact-label-name {
          color: $lightblue;
          display: block;
          font-size: 1.5vw;
          width: max-content;
        }
        .contact-input-name {
          margin-bottom: 20px;
          margin-top: 10px;
          background-color: #102457;
          width: 300px;
          height: 50px;
          color: $white;
          font-size: 1vw;
          text-indent: 5px;
          display: block;
        }
      }
      .section2 {
        float: left;
        margin-top: -70px;
        .contact-label-email {
          color: $lightblue;
          display: block;
          font-size: 1.5vw;
          width: max-content;
        }
        .contact-input-email {
          margin-bottom: 20px;
          margin-top: 10px;
          background-color: #102457;
          width: 300px;
          height: 50px;
          color: $white;
          font-size: 1vw;
          text-indent: 5px;
          display: block;
        }
      }
      .contact-label-message {
        color: $lightblue;
        display: block;
        margin-top: 100px;
        font-size: 1.5vw;
        width: max-content;
      }
      .contact-input-message {
        margin-bottom: 20px;
        margin-top: 10px;
        background-color: #102457;
        width: 660px;
        height: 200px;
        color: $white;
        font-size: 1vw;
        text-indent: 5px;
        display: block;
        font-family: $font !important;
        resize: none;
        outline: none;
      }

      .contact-submit-button {
        color: $lightblue;
        background-color: #102457;
        font-family: $font;
        font-size: 2vw;
        width: 20%;
        margin-left: 30%;
      }
    }
  }
}

.footer-container {
  z-index: 20;
  display: flex;
  flex-direction: column;
  margin-top: 7100px;
  width: 100%;
  height: 120px;
  position: absolute;
  background-color: $background;
  .built-by {
    color: $white;
    margin-left: 40%;
    font-size: 2vw;
    margin-bottom: 5px;
  }
  .view-on-github {
    color: $white;

    margin-left: 42%;
    font-size: 2vw;
  }
}

.burger-menu {
  display: none;
  .bm-item {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    margin-bottom: 10px;
    color: $white;
    transition: color 0.2s;
  }

  .bm-burger-button {
    position: fixed;
    width: 36px;
    height: 30px;
    right: 25px;
    top: 36px;
  }

  .bm-burger-bars {
    background: $white;
  }

  .bm-cross-button {
    height: 24px;
    width: 24px;
  }

  .bm-cross {
    background: $white;
  }

  .bm-menu-wrap {
    .burger-github {
      height: 50px;
      width: 50px;
      fill: #ffffff;
      position: fixed;
      bottom: 12%;
      z-index: 20;
    }
  
    .burger-linkedin {
      height: 50px;
      width: 50px;
      fill: #ffffff;
      position: fixed;
      bottom: 12%;
      margin-left: 18%;
      z-index: 20;
    }
  }
  .bm-menu {
    background:$background;
    padding: 3em 3em 0;
    font-size: 1.75em;
  }

  .bm-item-list {
    color: $white;
  }

  .bm-overlay {
    background: $background;
    
  }


}

.resume-link {
  text-decoration: none;
  color: $white;
}
/* ... */

